<resources>
    <string name="app_name">NavigationComponentDemo2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_is_home_page">This is Home Page</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="this_is_about_page">This is About Page</string>
    <string name="home">Home</string>
    <string name="this_is_profile_page">This is Profile Page</string>
    <string name="object_argument">Object Argument</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="trainee_id">Trainee Id</string>
</resources>